--- a/app/src/main/res/layout/activity_class_groups.xml
+++ b/app/src/main/res/layout/activity_class_groups.xml
@@ -62,7 +62,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/groupNameTextInputLayout"
-            style="@style/inputFieldColor"
+            style="@style/inputField"
             android:layout_marginHorizontal="25dp"
             android:layout_marginTop="80dp">
 
