--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -100,7 +100,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/emailTextInputLayout"
-                style="@style/inputFieldColor"
+                style="@style/inputField"
                 android:layout_marginHorizontal="25dp">
 
                 <com.google.android.material.textfield.TextInputEditText
