--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -120,7 +120,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editFirstNameTextInputLayout"
-                style="@style/inputFieldColor">
+                style="@style/inputField">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editFirstName"
@@ -131,7 +131,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editLastNameTextInputLayout"
-                style="@style/inputFieldColor">
+                style="@style/inputField">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editLastName"
@@ -142,7 +142,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editUserNameTextInputLayout"
-                style="@style/inputFieldColor">
+                style="@style/inputField">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editUserName"
@@ -153,7 +153,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editEmailTextInputLayout"
-                style="@style/inputFieldColor">
+                style="@style/inputField">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editEmail"
@@ -221,7 +221,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/password1TextInputLayout"
-                style="@style/inputFieldColor"
+                style="@style/inputField"
                 android:layout_marginHorizontal="25dp"
                 app:passwordToggleEnabled="true">
 
@@ -234,7 +234,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/password2TextInputLayout"
-                style="@style/inputFieldColor"
+                style="@style/inputField"
                 android:layout_marginHorizontal="25dp"
                 app:passwordToggleEnabled="true">
 
