--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -124,7 +124,7 @@
     <style name="actionButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">64dp</item>
-        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginTop">10dp</item>
         <item name="android:textSize">16sp</item>
     </style>
 
@@ -163,7 +163,7 @@
     <style name="inputField">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">10dp</item>
+        <item name="errorEnabled">true</item>
     </style>
 
     <style name="inputFieldEditText">
