--- a/app/src/main/res/layout/activity_class_students.xml
+++ b/app/src/main/res/layout/activity_class_students.xml
@@ -54,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/Surface"
-        android:visibility="">
+        android:visibility="gone">
 
         <ImageButton
             android:id="@+id/closeStudentPanel"
