--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -109,6 +109,7 @@
                     android:src="@drawable/baseline_account_circle_dark_24" />
 
                 <ImageButton
+                    android:id="@+id/changeProfileImage"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_alignParentEnd="true"
