--- a/app/src/main/res/layout/grid_x_list_item.xml
+++ b/app/src/main/res/layout/grid_x_list_item.xml
@@ -21,8 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="20dp"
-                android:src="@drawable/baseline_account_circle_dark_24" />
+                android:layout_marginVertical="20dp" />
 
             <ImageButton
                 android:id="@+id/delete"
